<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <!-- for otp verification-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/phoneLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--Input phone Number -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/phoneLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_baseline_phone_android_24" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/phone_number"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phoneHint"
                android:textAlignment="center" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingStart="10dp">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                </com.hbb20.CountryCodePicker>

                <EditText
                    android:id="@+id/phoneEt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0.8"
                    android:ems="10"

                    android:hint="@string/PhoneNumber"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName|phone"
                    android:textColorHint="#78909C"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/phoneContinueBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="34dp"

                android:text="@string/continue_button"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- for otp verification-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/codeLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/enterOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/verifyOtp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/enterOtpHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_the_otp_we_sent"
                android:textAlignment="center" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">



                <EditText
                    android:id="@+id/codeEt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_weight="0.8"
                    android:ems="10"
                    android:hint="@string/enterOtp"
                    android:importantForAutofill="no"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:textColorHint="#78909C"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/resendCodeTv"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/didn_t_get_otp_resend"
                android:textAlignment="center"
                android:textColor="#777777"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/codeSubmitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:text="@string/submitButton"

                android:layout_gravity="center"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>







    </androidx.appcompat.widget.LinearLayoutCompat>


</layout>